Added chatbot feature

--- a/index.html
+++ b/index.html
@@ -107,10 +107,10 @@
             <i data-lucide="file-text" class="text-gray-600"></i>
             <span class="text-gray-800 font-medium">Contact</span>
           </a>
-          <!-- <a href="chatbot.html" class="nav-item flex items-center space-x-3 p-2 rounded-lg cursor-pointer">
-            <i data-lucide="file-text" class="text-gray-600"></i>
-            <span class="text-gray-800 font-medium">LLM Test WIP</span>
-          </a> -->
+          <a href="chatbot.html" class="nav-item flex items-center space-x-3 p-2 rounded-lg cursor-pointer">
+            <i data-lucide="message-square" class="text-gray-600"></i>
+            <span class="text-gray-800 font-medium">G-Chat</span>
+          </a>
         </nav>
       </div>
 
