--- a/chatbot.html
+++ b/chatbot.html
@@ -81,33 +81,50 @@
 
   <script>
     async function sendMessage() {
-      const chatInput = document.getElementById("chat-input");
-      const chatOutput = document.getElementById("chat-output");
-      const userMessage = chatInput.value.trim();
-      if (userMessage === "") return;
+        const chatInput = document.getElementById("chat-input");
+        const chatOutput = document.getElementById("chat-output");
+        const userMessage = chatInput.value.trim();
+        if (userMessage === "") return;
 
-      chatOutput.innerHTML += `<div class='flex justify-end'><div class='bg-gray-200 p-3 rounded-lg max-w-xl'>${userMessage}</div></div>`;
-      chatInput.value = "";
+        // Append user's message
+        chatOutput.innerHTML += `
+            <div class='flex justify-end'>
+            <div class='bg-gray-200 p-3 rounded-lg max-w-xl'>${userMessage}</div>
+            </div>
+        `;
+        chatInput.value = "";
 
-      try {
-        const response = await fetch("https://llm-connection.onrender.com/ask", {
-          method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({ query: userMessage })
-        });
+        try {
+            const response = await fetch("https://llm-connection.onrender.com/ask", {
+            method: "POST",
+            headers: { "Content-Type": "application/json" },
+            body: JSON.stringify({ query: userMessage })
+            });
 
-        if (!response.ok) {
-          throw new Error(`API Error: ${response.status} ${response.statusText}`);
+            if (!response.ok) {
+            throw new Error(`API Error: ${response.status} ${response.statusText}`);
+            }
+
+            const data = await response.json();
+
+            // Append AI's response (HTML-formatted)
+            chatOutput.innerHTML += `
+            <div class='flex justify-start'>
+                <div class='bg-blue-500 text-white p-3 rounded-lg max-w-xl'>
+                ${data.response}  <!-- Uses innerHTML to preserve formatting -->
+                </div>
+            </div>
+            `;
+
+            chatOutput.scrollTop = chatOutput.scrollHeight;
+        } catch (error) {
+            console.error("Error:", error);
+            chatOutput.innerHTML += `
+            <div class='text-red-500'><strong>Error:</strong> Unable to connect to the chatbot.</div>
+            `;
         }
-
-        const data = await response.json();
-        chatOutput.innerHTML += `<div class='flex justify-start'><div class='bg-blue-500 text-white p-3 rounded-lg max-w-xl'>${data.response}</div></div>`;
-        chatOutput.scrollTop = chatOutput.scrollHeight;
-      } catch (error) {
-        console.error("Error:", error);
-        chatOutput.innerHTML += `<div class='text-red-500'><strong>Error:</strong> Unable to connect to the chatbot.</div>`;
-      }
     }
+
   </script>
 
   <script>
