--- a/chatbot.html
+++ b/chatbot.html
@@ -96,13 +96,16 @@
 
         try {
             const response = await fetch("https://llm-connection.onrender.com/ask", {
-            method: "POST",
-            headers: { "Content-Type": "application/json" },
-            body: JSON.stringify({ query: userMessage })
+                method: "POST",
+                headers: { "Content-Type": "application/json" },
+                mode: "cors",  // ✅ Explicitly enabling CORS
+                cache: "no-cache",  // ✅ Prevents caching issues
+                credentials: "omit",  // ✅ Ensures no unnecessary credentials are sent
+                body: JSON.stringify({ query: userMessage })
             });
 
             if (!response.ok) {
-            throw new Error(`API Error: ${response.status} ${response.statusText}`);
+                throw new Error(`API Error: ${response.status} ${response.statusText}`);
             }
 
             const data = await response.json();
