Updating project page with details

--- a/projects.html
+++ b/projects.html
@@ -116,7 +116,7 @@
           </a>
           <a href="chatbot.html" class="nav-item flex items-center space-x-3 p-2 rounded-lg cursor-pointer">
             <i data-lucide="message-square" class="text-gray-600"></i>
-            <span class="text-gray-800 font-medium">G-Chat</span>
+            <span class="text-gray-800 font-medium">GauravGPT</span>
           </a>
         </nav>
       </div>
@@ -163,6 +163,20 @@
               <span class="keyword">SQL</span>
             </div>
             <a href="./nextbuys_details.html" class="text-blue-600 text-sm font-medium hover:underline mt-2 inline-block">View Project</a>
+          </div>
+
+          <div class="project-card bg-white p-4 rounded-lg shadow hover:shadow-lg" data-category="NLP">
+            <img src="./assets/gauravgpt_details.jpeg" alt="Adversarial Attacks" class="w-full h-40 object-cover rounded-md mb-4">
+            <h4 class="text-lg font-medium mb-2">Intelligent Portfolio Chatbot: AI-Powered Interactive Resume</h4>
+            <p class="text-sm text-gray-600 mb-4">An AI-powered chatbot integrated into my portfolio, leveraging RAG and LLM to provide interactive, dynamic responses about my projects and experiences.</p>
+            <div class="keywords">
+              <span class="keyword">FAISS</span>
+              <span class="keyword">FastAPI</span>
+              <span class="keyword">Render</span>
+              <span class="keyword">RAG</span>
+              <span class="keyword">LLM</span>
+            </div>
+            <a href="./gauravgpt_details.html" class="text-blue-600 text-sm font-medium hover:underline mt-2 inline-block">View Project</a>
           </div>
 
           <div class="project-card bg-white p-4 rounded-lg shadow hover:shadow-lg" data-category="computer-vision">
