--- a/chatbot.html
+++ b/chatbot.html
@@ -86,8 +86,16 @@
     <!-- Chat Title and Description -->
     <div class="text-left mb-6 w-full max-w-4xl break-words">
       <h1 class="text-3xl font-semibold mb-4 w-full break-words">🤖 GauravGPT – Your AI Guide to His Work</h1>
-      <p class="text-lg font-normal mb-4 w-full break-words">📌 Explore Gaurav Shetty’s portfolio interactively! Whether you're a recruiter, a fellow developer, or just curious, 
-        this chatbot can provide insights into his projects, skills, and expertise—instantly.</p>
+      <p class="text-lg font-normal mb-4 w-full break-words">
+        📌 Explore Gaurav Shetty’s portfolio interactively! Whether you're a recruiter, a fellow developer, or just curious, 
+        this chatbot can provide insights into his projects, skills, and expertise—instantly. 
+        <a href="gauravgpt_details.html" 
+           target="_blank" 
+           rel="noopener noreferrer" 
+           class="underline text-blue-500 hover:text-blue-700">
+           Find more details of this project here.
+        </a>
+    </p>
     </div>
     
     <!-- Chat Container - Increased Width -->
@@ -109,7 +117,7 @@
     function processLinks(responseText) {
         // Find all URLs and replace them with a properly formatted <a> tag
         return responseText.replace(/<a [^>]*href="([^"]+)"[^>]*>(.*?)<\/a>/g, 
-            `<a href="$1" target="_blank" rel="noopener noreferrer" class="underline text-blue-400 hover:text-blue-600">Click here for more details</a>`);
+            `<a href="$1" target="_blank" rel="noopener noreferrer" class="underline text-white-400 hover:text-blue-600">Click here for more details</a>`);
     }
 
     async function sendMessage() {
