Standardizing Nav Bar

--- a/projects.html
+++ b/projects.html
@@ -168,7 +168,7 @@
           <div class="project-card bg-white p-4 rounded-lg shadow hover:shadow-lg" data-category="NLP">
             <img src="./assets/gauravgpt_details.jpeg" alt="Adversarial Attacks" class="w-full h-40 object-cover rounded-md mb-4">
             <h4 class="text-lg font-medium mb-2">Intelligent Portfolio Chatbot: AI-Powered Interactive Resume</h4>
-            <p class="text-sm text-gray-600 mb-4">An AI-powered chatbot integrated into my portfolio, leveraging RAG and LLM to provide interactive, dynamic responses about my projects and experiences.</p>
+            <p class="text-sm text-gray-600 mb-4">An AI-powered chatbot integrated into my portfolio, leveraging RAG and LLM to provide dynamic responses about me.</p>
             <div class="keywords">
               <span class="keyword">FAISS</span>
               <span class="keyword">FastAPI</span>
