--- a/inferenceattack_details.html
+++ b/inferenceattack_details.html
@@ -101,7 +101,7 @@
           </a>
           <a href="chatbot.html" class="nav-item flex items-center space-x-3 p-2 rounded-lg cursor-pointer">
             <i data-lucide="message-square" class="text-gray-600"></i>
-            <span class="text-gray-800 font-medium">G-Chat</span>
+            <span class="text-gray-800 font-medium">GauravGPT</span>
           </a>
         </nav>
       </div>
