nav toggle for chatbot

--- a/chatbot.html
+++ b/chatbot.html
@@ -33,6 +33,20 @@
         #chat-output .ai-response {
             padding: 12px;
         }
+        .mobile-menu-button {
+          position: absolute;
+          top: 1rem;
+          right: 1rem;
+          z-index: 50;
+          background-color: rgba(0, 0, 0, 0.6);
+          color: white;
+          padding: 0.5rem 1rem;
+          border-radius: 0.5rem;
+          transition: background-color 0.3s ease;
+        }
+        .mobile-menu-button:hover {
+          background-color: rgba(0, 0, 0, 0.8);
+        }
     </style>
 </head>
 
