Homepage spelling change

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         <h2 class="text-3xl font-semibold mb-4">I'm Gaurav Shetty</h2>
         <p class="text-base text-gray-600">
           🔢 <b>Data is more than numbers—it’s a roadmap to the future.</b> With expertise in AI, statistics, and predictive modeling, I develop systems that analyze, optimize, and forecast, helping businesses and researchers stay ahead of the curve. 
-          Browsing feel outdated?
+          Browsing feels outdated?
           <a href="chatbot.html" class="text-blue-600 hover:underline">Chat with my AI-powered portfolio instead!</a>
         </p>
         <div class="flex items-center my-10">
