Changed nav layout

--- a/chatbot.html
+++ b/chatbot.html
@@ -68,6 +68,10 @@
           <i data-lucide="home" class="text-gray-600"></i>
           <span class="text-gray-800 font-medium">Home</span>
         </a>
+        <a href="chatbot.html" class="nav-item flex items-center space-x-3 p-2 rounded-lg cursor-pointer">
+          <i data-lucide="message-square" class="text-gray-600"></i>
+          <span class="text-gray-800 font-medium">GauravGPT</span>
+        </a>
         <a href="projects.html" class="nav-item flex items-center space-x-3 p-2 rounded-lg cursor-pointer">
           <i data-lucide="folder" class="text-gray-600"></i>
           <span class="text-gray-800 font-medium">Projects</span>
@@ -79,10 +83,6 @@
         <a href="about.html" class="nav-item flex items-center space-x-3 p-2 rounded-lg cursor-pointer">
           <i data-lucide="file-text" class="text-gray-600"></i>
           <span class="text-gray-800 font-medium">Contact</span>
-        </a>
-        <a href="chatbot.html" class="nav-item flex items-center space-x-3 p-2 rounded-lg cursor-pointer">
-          <i data-lucide="message-square" class="text-gray-600"></i>
-          <span class="text-gray-800 font-medium">GauravGPT</span>
         </a>
       </nav>
     </div>
@@ -101,8 +101,8 @@
     <div class="text-left mb-6 w-full max-w-4xl break-words">
       <h1 class="text-3xl font-semibold mb-4 w-full break-words">🤖 GauravGPT – Your AI Guide to His Work</h1>
       <p class="text-lg font-normal mb-4 w-full break-words">
-        📌 Explore Gaurav Shetty’s portfolio interactively! Whether you're a recruiter, a fellow developer, or just curious, 
-        this chatbot can provide insights into his projects, skills, and expertise—instantly. 
+        📌 Explore my portfolio interactively! Whether you're a recruiter, a fellow developer, or just curious, 
+        this chatbot can provide insights into my projects, skills, and expertise—instantly. 
         <a href="gauravgpt_details.html" 
            target="_blank" 
            rel="noopener noreferrer" 
