Removed dead links

--- a/lstmnlp_details.html
+++ b/lstmnlp_details.html
@@ -164,7 +164,7 @@
 
         <div class="flex space-x-4 mt-8">
           <a href="https://github.com/gauravshetty/nextbuys" target="_blank" class="px-4 py-2 bg-blue-500 text-white rounded-lg hover:bg-blue-600">View on GitHub</a>
-          <a href="https://nextbuys.co" target="_blank" class="px-4 py-2 bg-green-500 text-white rounded-lg hover:bg-green-600">Visit Website</a>
+          <!-- <a href="https://nextbuys.co" target="_blank" class="px-4 py-2 bg-green-500 text-white rounded-lg hover:bg-green-600">Visit Website</a> -->
         </div>
 
         <footer class="bg-white text-center py-8 mt-10 mb-10">
