Updated webpage titles

--- a/chatbot.html
+++ b/chatbot.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title class="text-3xl font-semibold mb-4">Chat with My AI - Gaurav's Portfolio</title>
+  <title class="text-3xl font-semibold mb-4">GauravGPT | AI Assistant</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
