Updated home page

--- a/index.html
+++ b/index.html
@@ -155,9 +155,9 @@
               <div class="project-card bg-white p-4 rounded-lg flex items-center space-x-4 hover:shadow-md transition-shadow">
                 <img src="./assets/metalearn.jpeg" alt="NextBuys.co Project" class="w-24 h-24 object-cover rounded-md">
                 <div>
-                  <h4 class="text-sm font-medium mb-1">Adaptive Loss Function Generation with Meta-Learning and Genetic Programming</h4>
+                  <h4 class="text-sm font-medium mb-1">Automating Loss Function Generation Using LLMs And Agentic AI Workflows</h4>
                     <p class="text-xs text-gray-600 mb-3">
-                      Developing a system that dynamically creates custom loss functions using meta-learning and genetic programming to optimize model performance.
+                      Developing a system that dynamically creates and validates custom loss functions using LLMs, GPUs and Agentic AI workflows.
                     </p>
                 </div>
               </div>
