Updated home page

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         <section class="mt-10">
           <h3 class="text-sm font-medium mb-4">
             Advancing AI demands continuous exploration. 
-            Currently I am focusing on using meta-learning and genetic programming to automate key training pipeline steps for optimal model performance. 
+            Currently I am focusing on using LLMs, GPU accelaration and agentic AI workflows to automate key training pipeline steps for optimal model performance. 
             Follow my journey below.
           </h3>
           <div class="space-y-6">
