updated latest work experience

--- a/experience.html
+++ b/experience.html
@@ -195,8 +195,30 @@
       <div class="content-container">
         <h2 class="text-3xl font-semibold mb-6">Professional Experience</h2>
         <p class="text-base text-gray-600 mb-10">Explore my work experience in data science, analytics, and system architecture roles.</p>
+        
+
 
         <div class="timeline-container">
+          <div class="timeline">
+            <div class="timeline-marker" style="top: 0;">Current</div>
+            <div class="timeline-marker" style="bottom: 0;">June 2025</div>
+          </div>
+          <div class="experience-section">
+            <div class="experience-header">
+              <img src="./assets/shiom_logo.jpeg" alt="PGW Logo">
+              <div>
+                <h3 class="text-lg font-medium">Shiom.io</h3>
+                <p class="text-sm text-gray-600">AI Engineer | June 2025 - Current</p>
+              </div>
+            </div>
+            <p class="text-sm text-gray-600 mt-2"> Shiom is a start-up with a mission of cleaning the internet by providing ways to efficiently clean, transform and dig deep into underlying patterns in the data with their patented algorithms. As an AI Engineer, my
+              work revolves around managing, optimizing and tracking performance metrics of these algorithms. It involves researching traditional and emerging technologies (Agentic AI & LLMs) which could help in solving problems faced by the company and its partners. Currently exploring 
+              AI generated data, patterns among them and algorithms to identify such data among many other projects. </p>
+          </div>
+        </div>
+
+
+        <div class="timeline-container mt-10">
           <div class="timeline">
             <div class="timeline-marker" style="top: 0;">Dec 2024</div>
             <div class="timeline-marker" style="bottom: 0;">May 2024</div>
@@ -206,7 +228,7 @@
               <img src="./assets/pgw.jpeg" alt="PGW Logo">
               <div>
                 <h3 class="text-lg font-medium">Philadelphia Gas Works</h3>
-                <p class="text-sm text-gray-600">Statistics and Economics Intern | May 2024 - Dec 2024</p>
+                <p class="text-sm text-gray-600">Data Science Intern (Statistics and Economics) | May 2024 - Dec 2024</p>
               </div>
             </div>
             <p class="text-sm text-gray-600 mt-2">As the sole Data Science intern of the customer programs department, my roles primarily involved developing predictive models and conducting statistical analyses on PGW’s customer data. 
