--- a/about.html
+++ b/about.html
@@ -131,7 +131,7 @@
     <main id="main-content" class="flex-1 p-6 md:ml-64 flex justify-center items-center">
       <div class="content-container">
         <h2 class="text-4xl font-bold mb-6 text-gray-800">Let's Connect!</h2>
-        <p class="text-gray-600 mb-6 text-lg">I hope you enjoyed exploring my projects! If you'd like to discuss any of these projects, collaborate, or just have a chat, feel free to connect with me through any of the platforms below.</p>
+        <p class="text-gray-600 mb-6 text-lg">I hope you enjoyed exploring my work! If you'd like to discuss any of these projects, collaborate, or just have a chat, feel free to connect with me through any of the platforms below.</p>
         
         <div class="grid grid-cols-2 gap-4 text-lg font-medium">
           <a href="mailto:gaurav.shetty@rutgers.edu" class="flex items-center justify-center bg-gray-200 py-4 rounded-lg hover:bg-gray-300 transition">
@@ -175,7 +175,7 @@
             <span class="skill-tag">📚 Scikit-learn</span>
             <span class="skill-tag">📬 Postman</span>
             <span class="skill-tag">🧼 SOAP</span>
-            <span class="skill-tag">☁️ Azure DevOps</span>
+            <span class="skill-tag">☁️ AWS</span>
             <span class="skill-tag">🔧 GIT</span>
           </div>
         </section>
